--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@prisma/client": "^5.12.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-query-devtools": "^5.32.0",
     "@vercel/analytics": "^1.2.2",
-    "@vercel/postgres": "^0.7.2",
+    "@vercel/postgres": "^0.10.0",
     "cloudinary": "^2.1.0",
     "framer-motion": "^11.1.9",
     "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "react-redux": "^9.2.0",
     "react-select": "^5.8.0",
     "uuid": "^9.0.1"
   },
