--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^6.4.1",
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-query-devtools": "^5.32.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.7.2",
-    "cloudinary": "^2.1.0",
+    "cloudinary": "^2.5.1",
     "framer-motion": "^11.1.9",
     "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-select": "^5.8.0",
+    "together-ai": "^0.13.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -44,7 +45,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
-    "prisma": "^5.11.0",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
